--- a/README.adoc
+++ b/README.adoc
@@ -246,3 +246,9 @@ link:src/cooljure/csv.adoc[cooljure.csv documentation]
 === coojure.parse - Functions to ease parsing
 
 TEMP TODO:  see source code http://github.com/cloojure/cooljure/blob/master/src/cooljure/parse.clj[cooljure.parse]
+
+== License
+
+Copyright © 2014 Alan Thompson. 
+
+Distributed under the Eclipse Public License, the same as Clojure.
