--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,6 @@
-cooljure
-========
+= cooljure
 
-## Cool stuff you wish was in Clojure
+== Cool stuff you wish was in Clojure
 
 Leiningen coordinates:
 
