--- a/README.adoc
+++ b/README.adoc
@@ -163,7 +163,7 @@ just use `spy`:
     (inc)
     (spy :msg "after inc")
     (* 2))
-after inc => 2
+;; after inc => 2
 4
 ----
 This tool is named `spy` since it can display values from inside either  a "thread-first" or a "thread-last" form
@@ -175,7 +175,7 @@ This tool is named `spy` since it can display values from inside either  a "thre
     (inc)
     (spy :msg "after inc")
     (* 2))
-after inc => 2
+;; after inc => 2
 4
 ----
 
@@ -187,32 +187,40 @@ value is output using (pr-str ...) so that numbers and strings are unambiguous i
 [source,clojure]
 ----
 > (-> 30 (+ 4) (spy :msg "dbg") (* 10))
-dbg => 34
+;; dbg => 34
 340
 
 (-> "3" (str "4") (spy :msg "dbg") (str "0"))
-dbg => "34"
+;; dbg => "34"
 "340"
 ----
 
 Sometimes you may prefer to print out the literal expression instead of a
 message. In this case, just use `spyx`:
-
 [source,clojure]
 ----
 (as-> 1 x
       (spyx (inc x))
       (* 2 x))
-(inc x) => 2
+;; (inc x) => 2
 4
-
 ----
+
+In other instances, you may wish to use `spyxt` display both the type and value of an expression:
+[source,clojure]
+----
+(defn mystery-fn [] (into (sorted-map) {:b 2 :a 1}))
+(spyxt (mystery-fn))
+;; (mystery-fn) => clojure.lang.PersistentTreeMap->{:a 1, :b 2}
+----
+
 To be precise, the function signatures are:
 
 [source,clojure]
 ----
 (spy :msg msg-str)    ; the ":msg" keyword literal is required
 (spyx expr)
+(spyxt expr)
 ----
 
 === REPL driven testing
