--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -19,6 +19,8 @@ a few attributes that will apply to our heroes & villains:
 
 [source,clojure]
 ----
+  (:require [tupelo.datomic   :as td]
+            [tupelo.schema    :as ts])
   ; Create some new attributes. Required args are the attribute name (an optionally namespaced
   ; keyword) and the attribute type (full listing at http://docs.datomic.com/schema.html). We wrap
   ; the new attribute definitions in a transaction and immediately commit them into the DB.
