--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -40,8 +40,8 @@ number of choices available to our antagonists:
 [source,clojure]
 ----
   ; Create some "enum" values. These are degenerate entities that serve the same purpose as an
-  ; (integer) enumerated value in Java (these entities will never have any attributes). Again, we
-  ; wrap our new enum values in a transaction and commit them in to the DB. 
+  ; enumerated value in Java (these entities will never have any attributes). Again, we
+  ; wrap our new enum values in a transaction and commit them into the DB. 
   (td/transact *conn* 
     (td/new-enum :weapon/gun)
     (td/new-enum :weapon/knife)
